# clomp

./: .cirrus.yml  .gitignore  LICENSE  README.md  algorithm.txt  pyproject.toml  test.py
clomp/: __init__.py  accessors.py  actions.py  workspace.py
tests/: test_parser.py
