[tool.poetry]
name = "clomp"
version = "0.1.0"
description = "CLIs by Composition"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
